# frp-operator

./: Cargo.toml  Dockerfile  Readme.md  index.yaml
.github/workflows/: build.yml  helm.yml  main.yml  release.yml
chart/: Chart.yaml  values.yaml
chart/templates/: clusterrolebinding.yaml  deployment.yaml
charts/frp-operator/: Chart.yaml  values.yaml
charts/frp-operator/templates/: clusterrole.yaml  deployment.yaml  ingressclass.yaml
deploy/: clusterrole.yaml  clusterrolebinding.yaml  customresourcedefinition.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  secret.yaml  serviceaccount.yaml
examples/: client.yaml  whoami.yaml
src/: config.rs  context.rs  error.rs  lib.rs  main.rs
src/controllers/: client.rs  ingress.rs  mod.rs  service.rs
src/frpc/: config.rs  mod.rs
