[package]
name = "frp-operator"
version = "0.1.0"
edition = "2021"
default-run = "frp-operator"

[dependencies]
kube = { version = "0.91", features = [
    "runtime",
    "derive",
    "unstable-runtime",
] }
k8s-openapi = { version = "0.22", features = ["latest"] }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
thiserror = "1.0"
futures-util = "0.3"
toml = "0.8"
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
json-patch = "1.4"
