[package]
name = "frp-operator"
version = "0.1.3"
edition = "2021"

[dependencies]
kube = { version = "0.91", features = [
    "runtime",
    "derive",
    "unstable-runtime",
] }
k8s-openapi = { version = "0.22", features = ["latest"] }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
futures-util = "0.3"
toml = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
